# treely

./: .gitignore  CHANGELOG.md  README.md  deployment_guide.md  fix_renderer.py  pyproject.toml  update.txt
.Jules/: palette.md
.github/workflows/: ci.yml  publish.yml
.jules/: bolt.md
tests/: conftest.py  test_cli.py  test_config_file.py  test_filters.py  test_imports.py  test_renderer.py  test_walker.py
treely/: __init__.py  config.py  config_file.py  filters.py  git.py  main.py  output.py  renderer.py  theme.py  tree_node.py  utils.py  walker.py
