[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treely"
version = "2.0.0"
authors = [
    { name = "Rudra Mondal", email = "rudramondal815@gmail.com" },
]
description = "A modern, beautiful and powerful command-line directory tree generator with rich rendering, git integration, JSON/Markdown output, and a profile system."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
keywords = [
    "tree", "treely", "directory", "cli", "tool", "generator",
    "structure", "dirtree", "treegen", "foldertree", "rich",
    "gitignore", "llm", "context",
]
dependencies = [
    "pyperclip>=1.8.2",
    "pathspec>=0.12.1",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# TOML config file support for Python < 3.11
config = [
    "tomli>=2.0.1; python_version < '3.11'",
]
# Shell auto-completion
completion = [
    "argcomplete>=3.0",
]
# Development tools
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/rudra-mondal/treely"
Repository = "https://github.com/rudra-mondal/treely"
"Bug Tracker" = "https://github.com/rudra-mondal/treely/issues"
Changelog = "https://github.com/rudra-mondal/treely/blob/main/CHANGELOG.md"

[project.scripts]
treely = "treely.main:main"

# ── Hatch build settings ──────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["treely"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["treely"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["treely"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false